src/test/ui/borrowck/borrowck-mut-borrow-linear-errors.ast.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/borrowck-mut-borrow-linear-errors.rs:13:35
   |
LL |             1 => { addr.push(&mut x); }
   |                                   ^ mutable borrow starts here in previous iteration of loop
...
LL | }
   | - mutable borrow ends here

error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/borrowck-mut-borrow-linear-errors.rs:15:35
   |
LL |             1 => { addr.push(&mut x); }
   |                                   - first mutable borrow occurs here
LL |
LL |             2 => { addr.push(&mut x); }
   |                                   ^ second mutable borrow occurs here
...
LL | }
   | - first borrow ends here

error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/borrowck-mut-borrow-linear-errors.rs:17:35
   |
LL |             1 => { addr.push(&mut x); }
   |                                   - first mutable borrow occurs here
...
LL |             _ => { addr.push(&mut x); }
   |                                   ^ second mutable borrow occurs here
...
LL | }
   | - first borrow ends here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0499`.
